Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: learning
  labels:
    app: apache-new
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache-new
  template:
    metadata:
      labels:
        app: apache-new
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80
