pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apache-new
spec:
  containers:
  - name: apache
    image: httpd:latest
    ports:
    - containerPort: 80
