apachecluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: apache
spec:
  selector:
    app: apache-new
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
