apachenodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
  namespace: apache
spec:
  type: NodePort
  selector:
    app: apache-new
  ports:
    - port: 80
      targetPort: 80    
      nodePort: 30007
