loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
  namespace: learning
spec:
  selector:
    app: apache-new
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80    
  type: LoadBalancer
