nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
  namespace: learning
spec:
  type: NodePort
  selector:
    app: apache-new
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80    
      nodePort: 32000
