rashidcluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: rashid-service
  namespace: apache
spec:
  selector:
    app: rashid
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
