ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: apache
spec:
  rules:
  - host: "ingress.com" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
      - path: /apache
        pathType: Prefix
        backend:
          service:
           name: rashid-service
           port:
             number: 80
